// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoginPage > Test to render error 1`] = `
<div>
  <div
    class="h-1/3 mt-10 flex items-center justify-center"
  >
    <form
      class="text-white p-6 rounded-lg shadow-lg w-1/2 bg-sky-700 flex flex-col justify-center items-center text-center"
    >
      <h1
        class="text-2xl mt-2.5 mb-1"
      >
        Iniciar Sesión
      </h1>
      <div>
        <label>
          <input
            autocomplete="email"
            class="mt-4 border-2 rounded-lg "
            name="email"
            placeholder="Email"
            type="text"
            value=""
          />
        </label>
      </div>
      <div>
        <label>
          <input
            autocomplete="current-password"
            class="mt-4 border-2 rounded-lg "
            name="password"
            placeholder="Contraseña"
            type="password"
            value=""
          />
        </label>
      </div>
      <span
        class="mt-3 flex gap-2"
      >
        Guardar La sesión?
        <input
          type="checkbox"
        />
      </span>
      <button
        class="sc-FEMpB ihqouL mt-4"
        disabled=""
        type="submit"
      >
        Iniciar Sesión
      </button>
      <span
        class="text-red-500 bg-sky-950/50 pl-3.5 pr-3.5 "
        role="alert"
      >
        Por favor ingrese un usuario y contraseña válidos
      </span>
    </form>
  </div>
</div>
`;

exports[`LoginPage > should render 1`] = `
<div>
  <div
    class="h-1/3 mt-10 flex items-center justify-center"
  >
    <form
      class="text-white p-6 rounded-lg shadow-lg w-1/2 bg-sky-700 flex flex-col justify-center items-center text-center"
    >
      <h1
        class="text-2xl mt-2.5 mb-1"
      >
        Iniciar Sesión
      </h1>
      <div>
        <label>
          <input
            autocomplete="email"
            class="mt-4 border-2 rounded-lg "
            name="email"
            placeholder="Email"
            type="text"
            value=""
          />
        </label>
      </div>
      <div>
        <label>
          <input
            autocomplete="current-password"
            class="mt-4 border-2 rounded-lg "
            name="password"
            placeholder="Contraseña"
            type="password"
            value=""
          />
        </label>
      </div>
      <span
        class="mt-3 flex gap-2"
      >
        Guardar La sesión?
        <input
          type="checkbox"
        />
      </span>
      <button
        class="sc-FEMpB ihqouL mt-4"
        disabled=""
        type="submit"
      >
        Iniciar Sesión
      </button>
    </form>
  </div>
</div>
`;
